Release 2.0
# Changes and Updates
- Upgrade node js to LTS 10.15.3
- Upgrade node modules to latest versions.
- Remove gulp & used pm2 for production and nodemon for local.
- Update linting
- Docker integration.
- Updated test cases.
- Bug fixes.

# Breaking Changes
- Remove gulp totally and used pm2 and nodemon to start server.
