# src/modules/v2/users/router.js
@@ -4,12 +4,12 @@ import * as user from './controller'
 export const baseUrl = '/users'
 
 export default [
-  {
-    method: 'GET',
-    route: '/',
-    handlers: [
-      ensureUser,
-      user.getUsers
-    ]
-  }
+	{
+		method: 'GET',
+		route: '/',
+		handlers: [
+			ensureUser,
+			user.getUsers
+		]
+	}
 ]
