# swagger/swagger.yaml
@@ -7,6 +7,7 @@ info:
 host: localhost:3000
 basePath: "/"
 schemes:
+- http
 - https
 tags:
   - name: Auth [version 1]
@@ -189,7 +190,7 @@ paths:
                 type: string
         '401': 
           description: Unauthorized
-  "/users/{id}":
+  "/v1/users/{id}":
     get:
       tags:
       - Users [version 1]
@@ -249,24 +250,11 @@ paths:
                 name:
                   descrpition: 'Name'
                   type: string
-                username:
-                  description: 'Username'
-                  type: string
-                password:
-                  description: 'Password'
-                  type: string
           required:
           - user
       responses:
-        '200':
-          type: object
-          properties:
-            _id:
-              type: string
-            name:
-              type: string
-            username:
-              type: string
+        '201':
+          description: Created Successfully
         '401': 
           description: Unauthorized
         '422':
